# ft_strace

./: CMakeLists.txt  Makefile  README.md  out_strace  test  test.asm
inc/: errno_table.h  ft_strace.h  syscall_32.h  syscall_64.h
src/: main.c  path.c  print.c  setup.c  signal_utils.c  string_manip.c
